--- a/cgv_phototicket/WebContent/pub/phototicket_index.html
+++ b/cgv_phototicket/WebContent/pub/phototicket_index.html
@@ -79,7 +79,7 @@
 <body>
 
 <div id="g_header">
-    <h1><img src="http://img.cgv.co.kr/WebApp/images/main/@2x/ico_app.png" alt="cgv">CGV 포토티켓</h1>
+    <h1><img src="../images/main/@2x/ico_app.png" alt="cgv">CGV 포토티켓</h1>
 </div>
 
 <div id="g_body">
