--- a/cgv_phototicket/WebContent/pub/Phototicket_popup_share.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_popup_share.html
@@ -7,23 +7,22 @@
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>CGV</title>
     <!-- [S] 운영소스 상속용 -->
-    <link rel="shortcut icon" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
-    <link rel="apple-touch-icon" sizes="114×114" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
-    <link rel="stylesheet" type="text/css" href="http://img.cgv.co.kr/WebApp/css/common.css">
-    <link rel="stylesheet" type="text/css" href="http://img.cgv.co.kr/WebApp/css/header.css">
-    <link rel="stylesheet" type="text/css" href="http://img.cgv.co.kr/WebApp/css/piemenu.css">
-    <link rel="stylesheet" type="text/css" href="http://img.cgv.co.kr/WebApp/css/eggupdate.css">
-    <link rel="stylesheet" type="text/css" href="http://img.cgv.co.kr/WebApp/css/eggupdateV4.css">
-    <link rel="stylesheet" type="text/css" href="http://img.cgv.co.kr/WebApp/css/v5/master.css?2019072509">
+    <link rel="shortcut icon" href="../images/common/favicon_cgv.png">
+    <link rel="apple-touch-icon" sizes="114×114" href="../images/common/favicon_cgv.png">
+    <link rel="stylesheet" type="text/css" href="../css/common.css">
+    <link rel="stylesheet" type="text/css" href="../css/header.css">
+    <link rel="stylesheet" type="text/css" href="../css/piemenu.css">
+    <link rel="stylesheet" type="text/css" href="../css/eggupdate.css">
+    <link rel="stylesheet" type="text/css" href="../css/eggupdateV4.css">
+    <link rel="stylesheet" type="text/css" href="../css/v5/master.css?2019072509">
     <link rel="canonical" href="http://www.cgv.co.kr/">
-    <script type="text/javascript" async="" src="http://www.google-analytics.com/analytics.js"></script>
-    <script type="text/javascript" async="" src="http://www.google-analytics.com/plugins/ua/ec.js"></script>
-    <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/appinterface.js"></script>
-    <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/Common/jquery-1.11.0.min.js"></script>
+
+    <script type="text/javascript" src="../js/appinterface.js"></script>
+    <script type="text/javascript" src="../js/Common/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/Common/jquery.menu.js"></script>
-    <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/Common/jindo.mobile.min.js"></script>
-    <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/Common/jindo.mobile.core.min.js"></script>
+    <script type="text/javascript" src="../js/Common/jquery.menu.js"></script>
+    <script type="text/javascript" src="../js/Common/jindo.mobile.min.js"></script>
+    <script type="text/javascript" src="../js/Common/jindo.mobile.core.min.js"></script>
     <script type="text/javascript" src="../js/morder.appInterface.js"></script>
     <script type="text/javascript" src="../js/clipboard.min.js"></script>
     <script type="text/javascript" src="../js/date.js"></script>
@@ -57,6 +56,30 @@
     <meta property="al:android:url" content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
     <meta property="al:android:package" content="com.cgv.android.movieapp">
     <meta property="al:android:app_name" content="CGV">
+</head>
+<body class="bg_white">
+<div class="wrap">
+    <section class="content_wrap container photo_ticket">
+        <a class="icon_share" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icShare"></i></a>
+        <!-- S 레이어 팝업 관련  -->
+        <div class="popLayer">
+            <div class="popFogBg" style="opacity: 0.5; top: 0; display: block;"></div>
+            <!-- S Filter 팝업 -->
+            <div class="popShare" style="display: block; bottom: 0">
+                <div class="popLayerHeader">
+                    <h1>공유하기</h1>
+                    <a href="#" class="btn_close _closePopup"><i class="sprite sprite-pt sprite-icClose"></i></a>
+                </div>
+                <div class="popLayerContainer">
+                    <ul class="list">
+                        <li><i class="sprite sprite-pt sprite-kakao"></i><span class="sns">카카오톡</span></li>
+                    </ul>
+                </div>
+            </div>
+            <!--   [E] 기간검색 팝업   -->
+        </div>
+        <!-- E 레이어 팝업 관련  -->
+    </section>
     <!-- [E] 운영소스 상속용 -->
     <!--
     [S] 2020.04.20
@@ -72,36 +95,11 @@
     -->
     <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="../js/swiper.min.js"></script>
-    <script type="text/javascript" src="../js/phototicket.js"></script>
+<!--    <script type="text/javascript" src="../js/phototicket.js"></script>-->
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/phototicket.css">
     <link rel="stylesheet" type="text/css" href="../css/swiper.min.css">
     <!--  [E] 포토티켓 추가	-->
-</head>
-<body class="bg_white">
-<div class="wrap">
-    <section class="content_wrap container photo_ticket">
-        <a class="icon_share" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icShare"></i></a>
-        <!-- S 레이어 팝업 관련  -->
-        <div class="popLayer">
-            <div class="popFogBg"></div>
-            <!-- S Filter 팝업 -->
-            <div class="popShare" style="display: none;">
-                <div class="popLayerHeader">
-                    <h1>공유하기</h1>
-                    <a href="#" class="btn_close _closePopup"><i class="sprite sprite-pt sprite-icClose"></i></a>
-                </div>
-                <div class="popLayerContainer">
-                    <ul class="list">
-                        <li><i class="sprite sprite-pt sprite-kakao"></i><span class="sns">카카오톡</span></li>
-                    </ul>
-                </div>
-            </div>
-            <!--   [E] 기간검색 팝업   -->
-        </div>
-        <!-- E 레이어 팝업 관련  -->
-    </section>
-
 </div>
 </body>
 </html>
