--- a/cgv_phototicket/pub/Phototicket_FlipSlider_web.html
+++ b/cgv_phototicket/pub/Phototicket_FlipSlider_web.html
@@ -80,10 +80,10 @@
             <!--
              날짜 : 20.04.23
              작성자 : 이주연
-             내용 :  클래스 badge_blue / badge_red 두 타입
+             내용 :  클래스 badge-blue / badge_red 두 타입
              -->
             <div>
-                <p class="badge badge_blue">
+                <p class="badge badge-blue">
                     <span class="dday">D-20</span><span class="text">출력가능일 4월 14일까지</span>
                 </p>
             </div>
@@ -415,7 +415,7 @@
                     <p class="text-sm">티켓판매기에서 예매번호 혹은<br/>
                         생년월일+휴대폰번호를 입력하여 출력해주세요</p>
                     <div>
-                        <a class="btn-outline-red" href="javascript:void(0);">자랑하기</a>
+                        <a class="btn-ani btn-boast _btnBoast">자랑하기</a>
                         <a class="btn-grey" href="javascript:void(0);">결제취소</a>
                     </div>
                 </div>
@@ -439,7 +439,6 @@
                 </ul>
             </div>
         </div>
-        <!-- [E] 기간검색 팝업   -->
     </div>
     <!-- [E] 공유하기 팝업  -->
 </div>
