--- a/cgv_phototicket/pub/Phototicket_boast_cancel.html
+++ b/cgv_phototicket/pub/Phototicket_boast_cancel.html
@@ -7,8 +7,8 @@
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>CGV</title>
     <!-- [S] 운영소스 상속용 -->
-    <link rel="shortcut icon" href="../images/common/favicon_cgv.png">
-    <link rel="apple-touch-icon" sizes="114×114" href="../images/common/favicon_cgv.png">
+    <link rel="shortcut icon" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
+    <link rel="apple-touch-icon" sizes="114×114" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
     <link rel="stylesheet" type="text/css" href="../css/common.css">
     <link rel="stylesheet" type="text/css" href="../css/header.css">
     <link rel="stylesheet" type="text/css" href="../css/piemenu.css">
@@ -79,7 +79,7 @@
             <!--
              날짜 : 20.04.23
              작성자 : 이주연
-             내용 :  클래스 badge_blue / badge_red 두 타입
+             내용 :  클래스 badge-blue / badge_red 두 타입
              -->
             <div>
                 <p class="badge badge-red">
@@ -173,7 +173,7 @@
                     <p class="text-sm">티켓판매기에서 예매번호 혹은<br/>
                         생년월일+휴대폰번호를 입력하여 출력해주세요</p>
                     <div>
-                        <a class="btn-outline-red" href="javascript:void(0);">자랑취소</a>
+                        <a class="btn-ani btn-boast _btnBoast">자랑하기</a>
                         <a class="btn-grey" href="javascript:void(0);">결제취소</a>
                     </div>
                 </div>
@@ -198,7 +198,6 @@
                 </ul>
             </div>
         </div>
-        <!-- [E] 기간검색 팝업   -->
     </div>
     <!-- [E] 공유하기 팝업  -->
 </div>
