--- a/cgv_phototicket/pub/Phototicket_main_app.html
+++ b/cgv_phototicket/pub/Phototicket_main_app.html
@@ -7,8 +7,8 @@
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>CGV</title>
     <!-- [S] 운영소스 상속용 -->
-    <link rel="shortcut icon" href="../images/common/favicon_cgv.png">
-    <link rel="apple-touch-icon" sizes="114×114" href="../images/common/favicon_cgv.png">
+    <link rel="shortcut icon" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
+    <link rel="apple-touch-icon" sizes="114×114" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
     <link rel="stylesheet" type="text/css" href="../css/common.css">
     <link rel="stylesheet" type="text/css" href="../css/header.css">
     <link rel="stylesheet" type="text/css" href="../css/piemenu.css">
@@ -384,7 +384,7 @@
                             <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
                         </div>
                     </div>
-                    <div class="badge badge_blue">
+                    <div class="badge badge-blue">
                         <p class="dday">D-17</p>
                         <p class="txt">출력가능일</p>
                     </div>
@@ -403,7 +403,7 @@
                             <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
                         </div>
                     </div>
-                    <div class="badge badge_blue">
+                    <div class="badge badge-blue">
                         <p class="dday">D-20</p>
                         <p class="txt">출력가능일</p>
                     </div>
