--- a/cgv_phototicket/pub/Phototicket_printed_completed.html
+++ b/cgv_phototicket/pub/Phototicket_printed_completed.html
@@ -7,8 +7,8 @@
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>CGV</title>
     <!-- [S] 운영소스 상속용 -->
-    <link rel="shortcut icon" href="../images/common/favicon_cgv.png">
-    <link rel="apple-touch-icon" sizes="114×114" href="../images/common/favicon_cgv.png">
+    <link rel="shortcut icon" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
+    <link rel="apple-touch-icon" sizes="114×114" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
     <link rel="stylesheet" type="text/css" href="../css/common.css">
     <link rel="stylesheet" type="text/css" href="../css/header.css">
     <link rel="stylesheet" type="text/css" href="../css/piemenu.css">
@@ -77,7 +77,7 @@
             <!--
              날짜 : 20.04.23
              작성자 : 이주연
-             내용 :  클래스 badge_blue / badge_red 두 타입
+             내용 :  클래스 badge-blue / badge_red 두 타입
              -->
             <div>
                 <p class="badge badge_grey">
@@ -314,7 +314,6 @@
                 </ul>
             </div>
         </div>
-        <!-- [E] 기간검색 팝업   -->
     </div>
     <!-- [E] 공유하기 팝업  -->
 </div>
