--- a/cgv_phototicket/pub/phototicket_index.html
+++ b/cgv_phototicket/pub/phototicket_index.html
@@ -215,7 +215,7 @@
 					 <td>포토티켓자랑하기_상세_내포토티켓(추천전)</td>
 					 <td class="filelink"><a href="./Phototicket_after_recommend_01.html" title="새창열림" target="_blank">./Phototicket_after_recommend_01.html</a></td>
 					 <td class="hidden-phone">완료</td>
-					 <td class="hidden-phone">버튼 애니메이션 컨펌 대기중(2020.04.29)</td>
+					 <td class="hidden-phone"></td>
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
@@ -223,7 +223,7 @@
 					 <td>포토티켓자랑하기_상세(추천)</td>
 					 <td class="filelink"><a href="./Phototicket_after_recommend_02.html" title="새창열림" target="_blank">./Phototicket_after_recommend_02.html</a></td>
 					 <td class="hidden-phone">완료</td>
-					 <td class="hidden-phone">버튼 애니메이션 컨펌 대기중(2020.04.29)</td>
+					 <td class="hidden-phone"></td>
 				 </tr>
             </tbody>
         </table>
