--- a/cgv_phototicket/pub/Phototicket_FlipSlider_type2.html
+++ b/cgv_phototicket/pub/Phototicket_FlipSlider_type2.html
@@ -7,8 +7,8 @@
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>CGV</title>
     <!-- [S] 운영소스 상속용 -->
-    <link rel="shortcut icon" href="../images/common/favicon_cgv.png">
-    <link rel="apple-touch-icon" sizes="114×114" href="../images/common/favicon_cgv.png">
+    <link rel="shortcut icon" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
+    <link rel="apple-touch-icon" sizes="114×114" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
     <link rel="stylesheet" type="text/css" href="../css/common.css">
     <link rel="stylesheet" type="text/css" href="../css/header.css">
     <link rel="stylesheet" type="text/css" href="../css/piemenu.css">
@@ -76,10 +76,10 @@
             <!--
              날짜 : 20.04.23
              작성자 : 이주연
-             내용 :  클래스 badge_blue / badge_red 두 타입
+             내용 :  클래스 badge-blue / badge_red 두 타입
              -->
             <div>
-                <p class="badge badge_blue">
+                <p class="badge badge-blue">
                     <span class="dday">D-20</span><span class="text">출력가능일 4월 14일까지</span>
                 </p>
             </div>
@@ -93,8 +93,6 @@
             <div class="title_area">
                 <span class="title">다크워터스(2D)</span>
                 <span class="title-sm">예매번호 : 001-0000-0000-002</span>
-                <!-- 광주충장로 점일 때 -->
-                <!-- <span class="tip">CGV광주충장로 점에서만 출력가능합니다.</span>-->
             </div>
             <div class="slider-wrap">
                 <div class="swiper-container">
@@ -289,7 +287,7 @@
                     <p class="text-sm">티켓판매기에서 예매번호 혹은<br/>
                         생년월일+휴대폰번호를 입력하여 출력해주세요</p>
                     <div>
-                        <a class="btn-outline-red" href="javascript:void(0);">자랑하기</a>
+                        <a class="btn-ani btn-boast _btnBoast">자랑하기</a>
                         <a class="btn-grey" href="javascript:void(0);">결제취소</a>
                     </div>
                 </div>
@@ -314,7 +312,6 @@
                 </ul>
             </div>
         </div>
-        <!-- [E] 기간검색 팝업   -->
     </div>
     <!-- [E] 공유하기 팝업  -->
 </div>
