--- a/cgv_phototicket/pub/Phototicket_button_animation01.html
+++ b/cgv_phototicket/pub/Phototicket_button_animation01.html
@@ -7,8 +7,8 @@
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>CGV</title>
     <!-- [S] 운영소스 상속용 -->
-    <link rel="shortcut icon" href="../images/common/favicon_cgv.png">
-    <link rel="apple-touch-icon" sizes="114×114" href="../images/common/favicon_cgv.png">
+    <link rel="shortcut icon" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
+    <link rel="apple-touch-icon" sizes="114×114" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
     <link rel="stylesheet" type="text/css" href="../css/common.css">
     <link rel="stylesheet" type="text/css" href="../css/header.css">
     <link rel="stylesheet" type="text/css" href="../css/piemenu.css">
@@ -77,7 +77,7 @@
             <!--
              날짜 : 20.04.23
              작성자 : 이주연
-             내용 :  클래스 badge_blue / badge_red 두 타입
+             내용 :  클래스 badge-blue / badge_red 두 타입
              -->
             <div>
                 <p class="badge badge_grey">
@@ -290,7 +290,7 @@
                     <p class="text-lg">출력이 완료된 포토티켓입니다.</p>
                     <p class="text-sm">이미 출력된 카드는 재출력이 불가합니다.</p>
                     <div>
-                        <a class="btn-ani button--wapasha _btnBoast">자랑하기</a>
+                        <a class="btn-ani btn-boast _btnBoast">자랑하기</a>
                         <a class="btn-grey" href="javascript:void(0);">삭제하기</a>
                     </div>
                 </div>
