--- a/cgv_phototicket/pub/Phototicket_FlipSlider_type2.html
+++ b/cgv_phototicket/pub/Phototicket_FlipSlider_type2.html
@@ -89,6 +89,12 @@
         </div>
         <!-- [S] 플립 슬라이더 -->
         <!-- tip 클래스 유무, 분기 처리 필요 -->
+        <!--
+          수정 날짜 :  2020.05.12
+          내용 : - back 화면 이미지 처리
+                - L:148~150 추가
+                - <div class="back">안쪽 정보(<p class="title">,<p class="title_lg">,<p class="title_sm">,<ul class="info">,<div class="bg_grey">,<div class="sign"> 삭제
+      -->
         <article class="myPhtoticketFlip">
             <div class="title_area">
                 <span class="title">다크워터스(2D)</span>
@@ -98,9 +104,59 @@
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
+                            <div class="flip-container active">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <div class="dim"></div>
+                                        <div class="inner">
+                                            <img src="../images/phototicket/main/sample.png"
+                                                 alt="">
+                                            <a href="javascript:void(0)" class="btn-toggle">
+                                                <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
+                                                    <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                        <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                        <circle class="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
+                                                        <circle class="outline" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                        <polyline class="check" stroke-width="4" points="41 70 56 85 92 49"></polyline>
+                                                    </g>
+                                                </svg>
+                                            </a>
+                                            <a class="btn-flip _flip" href="javascript:void(0)"><i
+                                                    class="sprite sprite-pt sprite-icCardRotation"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="back">
+                                        <div class="inner">
+                                            <!--
+                                                수정 날짜 :  2020.05.12
+                                                내용 : - back 화면 이미지 처리
+                                                      - L:148~150 추가
+                                                      - <div class="back">안쪽 정보(<p class="title">,<p class="title_lg">,<p class="title_sm">,<ul class="info">,<div class="bg_grey">,<div class="sign"> 삭제
+                                            -->
+                                            <div class="img">
+                                                <img src="../images/phototicket/main/photo_back.png" alt="">
+                                            </div>
+                                            <a href="javascript:void(0)" class="btn-toggle active">
+                                                <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
+                                                    <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                        <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                        <circle class="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
+                                                        <circle class="outline" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                        <polyline class="check" stroke-width="4" points="41 70 56 85 92 49"></polyline>
+                                                    </g>
+                                                </svg>
+                                            </a>
+                                            <a class="btn-flip _flip" href="javascript:void(0)"><i class="sprite sprite-pt sprite-icCardRotation"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
+                                        <div class="dim"></div>
                                         <div class="inner">
                                             <img src="../images/phototicket/main/sample.png"
                                                  alt="">
@@ -120,26 +176,16 @@
                                     </div>
                                     <div class="back">
                                         <div class="inner">
-                                            <p class="title">IMAX 2D(인생영화 기획전)<span class="rating"><i class="icon_rating icon_12"></i></span></p>
-                                            <p class="title_lg">날씨의 아이(인생영화기획전)</p>
-                                            <p class="title_sm">(IMAX 2D) Weathering With You</p>
-                                            <ul class="info">
-                                                <li class="bar"><span>CGV왕십리</span><span>2020. 03. 29(일)</span></li>
-                                                <li class="bar"><span>6회</span><span>21:45(오후) ~ 23:47(오후)</span></li>
-                                                <li>IMAX관</li>
-                                                <li><span>일반 3명</span></li>
-                                            </ul>
-                                            <div class="bg_grey">
-                                                <p class="number">예매번호 : <span>2020-0000-0000-0000</span></p>
-                                                <p class="text">이포토티켓으로는 입장하실 수 없습니다.<br/>
-                                                    모바일 티켓 혹은 예매번호로 티켓을 추력 후<br/>
-                                                    입장해주세요.</p>
+                                            <!--
+                                                수정 날짜 :  2020.05.12
+                                                내용 : - back 화면 이미지 처리
+                                                      - L:148~150 추가
+                                                      - <div class="back">안쪽 정보(<p class="title">,<p class="title_lg">,<p class="title_sm">,<ul class="info">,<div class="bg_grey">,<div class="sign"> 삭제
+                                            -->
+                                            <div class="img">
+                                                <img src="../images/phototicket/main/photo_back.png" alt="">
                                             </div>
-                                            <div class="sign">
-                                                <p class="lg">CURTUREPLEX CGV</p>
-                                                <p class="sm">© CJ CGV. All rights reserved.</p>
-                                            </div>
-                                            <a href="javascript:void(0)" class="btn-toggle">
+                                            <a href="javascript:void(0)" class="btn-toggle active">
                                                 <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
                                                     <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                         <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
@@ -149,15 +195,14 @@
                                                     </g>
                                                 </svg>
                                             </a>
-                                            <a class="btn-flip _flip" href="javascript:void(0)"><i
-                                                    class="sprite sprite-pt sprite-icCardRotation"></i></a>
+                                            <a class="btn-flip _flip" href="javascript:void(0)"><i class="sprite sprite-pt sprite-icCardRotation"></i></a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="flip-container active">
+                            <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
                                         <div class="dim"></div>
@@ -180,26 +225,16 @@
                                     </div>
                                     <div class="back">
                                         <div class="inner">
-                                            <p class="title">IMAX 2D(인생영화 기획전)<span class="rating"><i class="icon_rating icon_15"></i></span></p>
-                                            <p class="title_lg">날씨의 아이(인생영화기획전)</p>
-                                            <p class="title_sm">(IMAX 2D) Weathering With You</p>
-                                            <ul class="info">
-                                                <li class="bar"><span>CGV왕십리</span><span>2020. 03. 29(일)</span></li>
-                                                <li class="bar"><span>6회</span><span>21:45(오후) ~ 23:47(오후)</span></li>
-                                                <li>IMAX관</li>
-                                                <li><span>일반 3명</span></li>
-                                            </ul>
-                                            <div class="bg_grey">
-                                                <p class="number">예매번호 : <span>2020-0000-0000-0000</span></p>
-                                                <p class="text">이포토티켓으로는 입장하실 수 없습니다.<br/>
-                                                    모바일 티켓 혹은 예매번호로 티켓을 추력 후<br/>
-                                                    입장해주세요.</p>
+                                            <!--
+                                                수정 날짜 :  2020.05.12
+                                                내용 : - back 화면 이미지 처리
+                                                      - L:148~150 추가
+                                                      - <div class="back">안쪽 정보(<p class="title">,<p class="title_lg">,<p class="title_sm">,<ul class="info">,<div class="bg_grey">,<div class="sign"> 삭제
+                                            -->
+                                            <div class="img">
+                                                <img src="../images/phototicket/main/photo_back.png" alt="">
                                             </div>
-                                            <div class="sign">
-                                                <p class="lg">CURTUREPLEX CGV</p>
-                                                <p class="sm">© CJ CGV. All rights reserved.</p>
-                                            </div>
-                                            <a href="javascript:void(0)" class="btn-toggle">
+                                            <a href="javascript:void(0)" class="btn-toggle active">
                                                 <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
                                                     <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                         <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
@@ -209,68 +244,7 @@
                                                     </g>
                                                 </svg>
                                             </a>
-                                            <a class="btn-flip _flip" href="javascript:void(0)"><i
-                                                    class="sprite sprite-pt sprite-icCardRotation"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="flip-container active">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <div class="dim"></div>
-                                        <div class="inner">
-                                            <img src="../images/phototicket/main/sample.png"
-                                                 alt="">
-                                            <a href="javascript:void(0)" class="btn-toggle">
-                                                <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
-                                                    <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                                        <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
-                                                        <circle class="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
-                                                        <circle class="outline" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
-                                                        <polyline class="check" stroke-width="4" points="41 70 56 85 92 49"></polyline>
-                                                    </g>
-                                                </svg>
-                                            </a>
-                                            <a class="btn-flip _flip" href="javascript:void(0)"><i
-                                                    class="sprite sprite-pt sprite-icCardRotation"></i></a>
-                                        </div>
-                                    </div>
-                                    <div class="back">
-                                        <div class="inner">
-                                            <p class="title">IMAX 2D(인생영화 기획전)<span class="rating"><i class="icon_rating icon_19"></i></span></p>
-                                            <p class="title_lg">날씨의 아이(인생영화기획전)</p>
-                                            <p class="title_sm">(IMAX 2D) Weathering With You</p>
-                                            <ul class="info">
-                                                <li class="bar"><span>CGV왕십리</span><span>2020. 03. 29(일)</span></li>
-                                                <li class="bar"><span>6회</span><span>21:45(오후) ~ 23:47(오후)</span></li>
-                                                <li>IMAX관</li>
-                                                <li><span>일반 3명</span></li>
-                                            </ul>
-                                            <div class="bg_grey">
-                                                <p class="number">예매번호 : <span>2020-0000-0000-0000</span></p>
-                                                <p class="text">이포토티켓으로는 입장하실 수 없습니다.<br/>
-                                                    모바일 티켓 혹은 예매번호로 티켓을 추력 후<br/>
-                                                    입장해주세요.</p>
-                                            </div>
-                                            <div class="sign">
-                                                <p class="lg">CURTUREPLEX CGV</p>
-                                                <p class="sm">© CJ CGV. All rights reserved.</p>
-                                            </div>
-                                            <a href="javascript:void(0)" class="btn-toggle">
-                                                <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
-                                                    <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                                        <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
-                                                        <circle class="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
-                                                        <circle class="outline" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
-                                                        <polyline class="check" stroke-width="4" points="41 70 56 85 92 49"></polyline>
-                                                    </g>
-                                                </svg>
-                                            </a>
-                                            <a class="btn-flip _flip" href="javascript:void(0)"><i
-                                                    class="sprite sprite-pt sprite-icCardRotation"></i></a>
+                                            <a class="btn-flip _flip" href="javascript:void(0)"><i class="sprite sprite-pt sprite-icCardRotation"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -293,7 +267,7 @@
                         수정 날짜 : 2020.05.08<br/>자랑하기 버튼 활성/비화성화 script추가<br/>phototicket.js L:44~52참고
                     </div>
                     <div>
-                        <a class="btn-boast disabled _btnBoast">자랑하기</a>
+                        <a class="btn-boast _btnBoast">자랑하기</a>
                         <a class="btn-grey _cancelPay" href="javascript:void(0);">결제취소</a>
                     </div>
                     <!--
@@ -303,7 +277,7 @@
                         수정 날짜 : 2020.05.08<br/>alert popup<br/>phototicket.js L:55~92참고
                     </div>
                     <div>
-                        <a class="btn-boast disabled _alertBoast">자랑하기</a>
+                        <a class="btn-boast _alertBoast">자랑하기</a>
                         <a class="btn-grey" href="javascript:void(0);">결제취소</a>
                     </div>
                     <div style="width: 100%; height: 75px; line-height: 25px; background: pink; text-align: center; padding: 0; margin-bottom: 0">
@@ -406,9 +380,9 @@
     작성자 : 이주연
     내용 : <script> var screenId = "PT003";</script> 추가
 -->
-<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+<!--<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>-->
 <script type="text/javascript" src="../js/swiper.min.js"></script>
-<script>var screenId = "PT003";</script>
+<!--<script>var screenId = "PT003";</script>-->
 <script type="text/javascript" src="../js/phototicket.js"></script>
 </body>
 </html>
