--- a/cgv_phototicket/pub/phototicket_index.html
+++ b/cgv_phototicket/pub/phototicket_index.html
@@ -90,7 +90,6 @@
                 <col style="width:5%">
                 <col style="width:15%">
                 <col style="width:20%">
-                <col>
                 <col style="width:15%">
                 <col style="width:25%">
 			</colgroup>
@@ -109,17 +108,9 @@
 	                <td class="no hidden-phone"><!-- 번호 --></td>
 	                <td>포토티켓 </td>
 	                <td>포토티켓-메인(app)</td>
-	                <td class="filelink"><a href="./Phototicket_main_app.html" title="새창열림" target="_blank">./Phototicket_main_app.html</a></td>
-	                <td class="hidden-phone">완료</td>
-	                <td class="hidden-phone"></td>
-	            </tr>
-	            <tr>
-	                <td class="no hidden-phone"><!-- 번호 --></td>
-	                <td>포토티켓 </td>
-	                <td>포토티켓-메인(web)</td>
 	                <td class="filelink"><a href="./Phototicket_main_web.html" title="새창열림" target="_blank">./Phototicket_main_web.html</a></td>
 	                <td class="hidden-phone">완료</td>
-	                <td class="hidden-phone"></td>
+	                <td class="hidden-phone">2020.05.12 헤더변경</td>
 	            </tr>
                 <tr>
 	                <td class="no hidden-phone"><!-- 번호 --></td>
@@ -127,7 +118,7 @@
 	                <td>포토티켓-메인(데이터가 없을 경우)</td>
 	                <td class="filelink"><a href="./Phototicket_main_no.html" title="새창열림" target="_blank">./Phototicket_main_no.html</a></td>
 	                <td class="hidden-phone">완료</td>
-	                <td class="hidden-phone"></td>
+	                <td class="hidden-phone">2020.05.12 헤더변경</td>
 	            </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
@@ -135,7 +126,7 @@
 					 <td>내포토티켓_제작완료</td>
 					 <td class="filelink"><a href="./Phototicket_completed.html" title="새창열림" target="_blank">./Phototicket_completed.html</a></td>
 					 <td class="hidden-phone">완료</td>
-					 <td class="hidden-phone"></td>
+					 <td class="hidden-phone">2020.05.12 헤더변경</td>
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
@@ -143,7 +134,7 @@
 					 <td>내포토티켓_출력완료</td>
 					 <td class="filelink"><a href="./Phototicket_printed.html" title="새창열림" target="_blank">./Phototicket_printed.html</a></td>
 					 <td class="hidden-phone">완료</td>
-					 <td class="hidden-phone"></td>
+					 <td class="hidden-phone">2020.05.12 헤더변경</td>
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
@@ -151,7 +142,7 @@
 					 <td>내포토티켓_제작완료(데이터X)</td>
 					 <td class="filelink"><a href="./Phototicket_completed_no.html" title="새창열림" target="_blank">./Phototicket_completed_no.html</a></td>
 					 <td class="hidden-phone">완료</td>
-					 <td class="hidden-phone">2020.05.08 페이지 추가</td>
+					 <td class="hidden-phone">2020.05.12 헤더변경</td>
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
@@ -159,7 +150,7 @@
 					 <td>내포토티켓_출력완료(데이터X)</td>
 					 <td class="filelink"><a href="./Phototicket_printed_no.html" title="새창열림" target="_blank">./Phototicket_printed_no.html</a></td>
 					 <td class="hidden-phone">완료</td>
-					 <td class="hidden-phone">2020.05.08 페이지 추가</td>
+					 <td class="hidden-phone">2020.05.12 헤더변경</td>
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
@@ -167,7 +158,7 @@
 					 <td>포토티켓 자랑하기</td>
 					 <td class="filelink"><a href="./Phototicket_myticket_boast.html" title="새창열림" target="_blank">./Phototicket_myticket_boast.html</a></td>
 					 <td class="hidden-phone">완료</td>
-					 <td class="hidden-phone"></td>
+					 <td class="hidden-phone">2020.05.12 헤더변경</td>
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
@@ -175,7 +166,7 @@
 					 <td>포토티켓 자랑하기(데이터X)</td>
 					 <td class="filelink"><a href="./Phototicket_myticket_boast_no.html" title="새창열림" target="_blank">./Phototicket_myticket_boast_no.html</a></td>
 					 <td class="hidden-phone">완료</td>
-					 <td class="hidden-phone">2020.05.08 페이지 추가</td>
+					 <td class="hidden-phone">2020.05.12 헤더변경</td>
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
@@ -193,22 +184,22 @@
 					 <td class="hidden-phone">완료</td>
 					 <td class="hidden-phone"></td>
 				 </tr>
-				 <tr>
-					 <td class="no hidden-phone"><!-- 번호 --></td>
-					 <td>포토티켓_상세</td>
-					 <td>제작완료</td>
-					 <td class="filelink"><a href="./Phototicket_FlipSlider.html" title="새창열림" target="_blank">./Phototicket_FlipSlider.html</a></td>
-					 <td class="hidden-phone">완료</td>
-					 <td class="hidden-phone">2020.05.08 버튼 활성/비활성 수정</td>
-				 </tr>
-				 <tr>
-					 <td class="no hidden-phone"><!-- 번호 --></td>
-					 <td>포토티켓_상세</td>
-					 <td>제작완료</td>
-					 <td class="filelink"><a href="./Phototicket_FlipSlider_type2.html" title="새창열림" target="_blank">./Phototicket_FlipSlider_type2.html</a></td>
-					 <td class="hidden-phone">완료</td>
-					 <td class="hidden-phone">2020.05.08 버튼 설명 추가</td>
-				 </tr>
+<!--				 <tr>-->
+<!--					 <td class="no hidden-phone">&lt;!&ndash; 번호 &ndash;&gt;</td>-->
+<!--					 <td>포토티켓_상세</td>-->
+<!--					 <td>제작완료</td>-->
+<!--					 <td class="filelink"><a href="./Phototicket_FlipSlider.html" title="새창열림" target="_blank">./Phototicket_FlipSlider.html</a></td>-->
+<!--					 <td class="hidden-phone">완료</td>-->
+<!--					 <td class="hidden-phone">2020.05.08 버튼 활성/비활성 수정</td>-->
+<!--				 </tr>-->
+<!--				 <tr>-->
+<!--					 <td class="no hidden-phone">&lt;!&ndash; 번호 &ndash;&gt;</td>-->
+<!--					 <td>포토티켓_상세</td>-->
+<!--					 <td>제작완료</td>-->
+<!--					 <td class="filelink"><a href="./Phototicket_FlipSlider_type2.html" title="새창열림" target="_blank">./Phototicket_FlipSlider_type2.html</a></td>-->
+<!--					 <td class="hidden-phone">완료</td>-->
+<!--					 <td class="hidden-phone">2020.05.08 버튼 설명 추가</td>-->
+<!--				 </tr>-->
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
 					 <td>포토티켓_상세</td>
@@ -220,10 +211,26 @@
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
 					 <td>포토티켓_상세</td>
+					 <td>제작완료</td>
+					 <td class="filelink"><a href="./Phototicket_FlipSlider_type2.html" title="새창열림" target="_blank">./Phototicket_FlipSlider_type2.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone">alert popup/toast popup</td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>포토티켓_상세</td>
 					 <td>제작완료-CGV광주충장로</td>
 					 <td class="filelink"><a href="./Phototicket_FlipSlider_small.html" title="새창열림" target="_blank">./Phototicket_FlipSlider_small.html</a></td>
 					 <td class="hidden-phone">완료</td>
 					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>포토티켓_상세</td>
+					 <td>제작완료(데이터가 한개 일 때)</td>
+					 <td class="filelink"><a href="./Phototicket_FlipSlider_web_single.html" title="새창열림" target="_blank">./Phototicket_FlipSlider_web_single.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone">2020.05.11 데이터가 한개 일 때, 페이지 추가</td>
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
